--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -37,7 +37,7 @@
                 <div class="col-12">
                     <h3 class="fs-4">Медицинское учреждение</h3>
                     <p class="word-wrap mb-0">
-                        <a href="#" th:href="@{/hospitals/__${user.hospital.id}__}" th:text="${user.hospital.name}" class="text-secondary">Национальный медицинский исследовательский центр имени В. А. Алмазова</a>
+                        <a id="info-hospital" href="#" th:href="@{/hospitals/__${user.hospital.id}__}" th:text="${user.hospital.name}" class="text-secondary">Национальный медицинский исследовательский центр имени В. А. Алмазова</a>
                     </p>
                 </div>
             </div>
@@ -46,11 +46,11 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Рабочая информация
-                        <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
+                        <a href="#" th:if="${isNonLoginInfoEditingEnabled}" data-bs-toggle="modal" data-bs-target="#employee-info-editing-modal" class="text-decoration-none">
                             <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p class="mb-0">Должность: <span th:text="${user.employeeInformation.post}" class="text-lowercase">Врач-кардиолог 3-го ранга</span></p>
+                    <p class="mb-0">Должность: <span id="info-post" th:text="${user.employeeInformation.post}" class="text-lowercase">Врач-кардиолог 3-го ранга</span></p>
                 </div>
             </div>
             <!---->
@@ -58,14 +58,16 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Общая информация
-                        <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
+                        <a href="#" th:if="${isNonLoginInfoEditingEnabled}" data-bs-toggle="modal" data-bs-target="#user-info-editing-modal" class="text-decoration-none">
                             <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p class="mb-1" th:text="'ФИО: ' + ${user.userInformation.fullName}">ФИО: Иванов Казимир Петрович</p>
-                    <p th:text="'Телефон: ' + ${user.userInformation.phoneNumber}" th:classappend="${user.userInformation.gender == null && user.userInformation.birthdate == null} ? 'mb-0' : 'mb-1'">Телефон: +7 (121) 916-09-91</p>
-                    <p th:if="${user.userInformation.gender != null}" th:classappend="${user.userInformation.birthdate == null} ? 'mb-0' : 'mb-1'">Пол: <span th:text="${user.userInformation.gender.alias}" class="text-lowercase"></span></p>
-                    <p class="mb-0" th:if="${user.userInformation.birthdate != null}" th:text="'Дата рождения: ' + ${user.userInformation.formattedBirthdate}">Дата рождения: 18-01-1981</p>
+                    <p id="info-full-name" class="mb-1" th:text="'ФИО: ' + ${user.userInformation.fullName}">ФИО: Иванов Казимир Петрович</p>
+                    <p id="info-phone-number" th:text="'Телефон: ' + ${user.userInformation.phoneNumber}" th:classappend="${user.userInformation.gender == null && user.userInformation.birthdate == null} ? 'mb-0' : 'mb-1'">Телефон: +7 (121) 916-09-91</p>
+                    <p id="info-gender" th:if="${user.userInformation.gender != null}" th:classappend="${user.userInformation.birthdate == null} ? 'mb-0' : 'mb-1'">
+                        Пол: <span th:text="${user.userInformation.gender.alias}" class="text-lowercase"></span>
+                    </p>
+                    <p id="info-birthdate" class="mb-0" th:if="${user.userInformation.birthdate != null}" th:text="'Дата рождения: ' + ${user.userInformation.formattedBirthdate}">Дата рождения: 18-01-1981</p>
                 </div>
             </div>
             <!---->
@@ -73,12 +75,12 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Логин-информация
-                        <a href="#" class="text-decoration-none">
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#login-info-editing-modal" class="text-decoration-none">
                             <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p class="mb-1" th:text="'Почта: ' + ${user.userSecurityInformation.email}">Почта: some@exampleMail</p>
-                    <p class="mb-0">Пароль: ••••••••••••</p>
+                    <p id="info-email" class="mb-1" th:text="'Почта: ' + ${user.userSecurityInformation.email}">Почта: some@exampleMail</p>
+                    <p id="info-password" class="mb-0">Пароль: ••••••••••••</p>
                 </div>
             </div>
             <!---->
@@ -86,11 +88,11 @@
                 <div class="col-12">
                     <h3 class="fs-4">
                         Активность
-                        <a th:if="${isActivityEditingEnabled}" href="#" class="text-decoration-none">
+                        <a th:if="${isActivityEditingEnabled}" href="#" data-bs-toggle="modal" data-bs-target="#inactivity-selection-modal" class="text-decoration-none">
                             <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p class="text-success mb-0">Активен</p>
+                    <p id="info-activity" th:text="${activityMessage}" class="text-success mb-0">Активен</p>
                 </div>
             </div>
             <!---->
@@ -261,6 +263,31 @@
             </div>
         </div>
         <!---->
+        <div class="modal fade" id="inactivity-selection-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-4" id="inactivity-selection-modal-title">Опция</h1>
+                        <button id="inactivity-selection-modal-close-1" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="inactivity-selection-modal-text">
+                        <div class="d-flex mb-2">
+                            <button class="btn btn-lg btn-success flex-grow-1" data-bs-toggle="modal" data-bs-target="#vacation-modal">Назначить отпуск</button>
+                        </div>
+                        <div class="d-flex mb-2">
+                            <button class="btn btn-lg btn-warning flex-grow-1" data-bs-toggle="modal" data-bs-target="#sick-leave-modal">Назначить больничный</button>
+                        </div>
+                        <div class="d-flex mb-0">
+                            <button class="btn btn-lg btn-danger flex-grow-1" data-bs-toggle="modal" data-bs-target="#dismissal-modal">Уволить</button>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="inactivity-selection-modal-close-2" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!---->
         <div class="modal fade" id="vacation-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -384,14 +411,6 @@
                 </div>
             </div>
         </div>
-        <!---->
-        <button type="button" data-bs-toggle="modal" data-bs-target="#user-info-editing-modal">Редактирование общей информации</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#employee-info-editing-modal">Редактирование рабочей информации</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#login-info-editing-modal">Редактирование логин-информации</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#vacation-modal">Назначение отпуска</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#sick-leave-modal">Назначение больничного</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#dismissal-modal">Назначение увольнения</button>
-        <button type="button" data-bs-toggle="modal" data-bs-target="#patient-inactivity-modal">Назначение неактивности</button>
         <!---->
         <div th:replace="~{/fragments/modal/error-modal :: error-modal}"></div>
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
