--- a/src/main/resources/templates/indicators/forms/walk-test-form.html
+++ b/src/main/resources/templates/indicators/forms/walk-test-form.html
@@ -18,40 +18,39 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row mb-5">
-                <div class="col-12">
-                    <h1 class="text-center fs-3 mb-0">Т6МХ: общие данные</h1>
-                </div>
-            </div>
-            <!---->
-            <form action="#" method="post" id="walk-test-form" class="fs-5">
+            <form action="#" method="post" id="walk-test-form" class="fs-6">
                 <!---->
                 <div class="row mb-5">
                     <div class="col-12">
-                        <div class="mb-5">
-                            <h4 class="fs-4">Кислородная поддержка</h4>
-                            <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
-                                <label class="form-check-label" th:for="'oxygenSupport' + ${each}" th:text="${each.hasNot}">Нет</label>
-                                <input th:id="'oxygenSupport' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="oxygenSupport" />
+                        <h2 class="text-center fs-3 mb-3">Общие результаты</h2>
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-lg-between mb-2">
+                            <div class="m-1">
+                                <h4 class="fs-5">Кислородная поддержка</h4>
+                                <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
+                                    <label class="form-check-label" th:for="'oxygenSupport' + ${each}" th:text="${each.hasNot}">Нет</label>
+                                    <input th:id="'oxygenSupport' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="oxygenSupport" />
+                                </div>
+                            </div>
+                            <div class="m-1">
+                                <h4 class="fs-5">Вспомогательные устройства для ходьбы</h4>
+                                <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
+                                    <label class="form-check-label" th:for="'auxiliaryDevices' + ${each}" th:text="${each.hasNot}">Есть</label>
+                                    <input th:id="'auxiliaryDevices' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="auxiliaryDevices" />
+                                </div>
                             </div>
                         </div>
-                        <div class="mb-5">
-                            <h4 class="fs-4">Вспомогательные устройства для ходьбы</h4>
-                            <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
-                                <label class="form-check-label" th:for="'auxiliaryDevices' + ${each}" th:text="${each.hasNot}">Есть</label>
-                                <input th:id="'auxiliaryDevices' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="auxiliaryDevices" />
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-lg-between mb-2">
+                            <div class="flex-grow-1 m-1">
+                                <label for="distance" class="form-label fw-semibold fs-5">Дистанция (м)</label>
+                                <input type="number" step="0.01" name="distance" id="distance" class="form-control" placeholder="784.31" />
+                            </div>
+                            <div class="flex-grow-1 m-1">
+                                <label for="numberOfStops" class="form-label fw-semibold fs-5">Количество остановок</label>
+                                <input type="number" name="numberOfStops" id="numberOfStops" class="form-control" placeholder="2" />
                             </div>
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="distance" class="form-label fw-semibold fs-4">Дистанция (м)</label>
-                            <input type="number" step="0.01" name="distance" id="distance" class="form-control" placeholder="784.31" />
-                        </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="numberOfStops" class="form-label fw-semibold fs-4">Количество остановок</label>
-                            <input type="number" name="numberOfStops" id="numberOfStops" class="form-control" placeholder="2" />
-                        </div>
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <label for="breathlessness" class="form-label fw-semibold fs-4">Одышка по шкале Борга</label>
+                        <div class="col-12">
+                            <label for="breathlessness" class="form-label fw-semibold fs-5">Одышка по шкале Борга</label>
                             <select name="breathlessness" id="breathlessness" class="form-select">
                                 <option th:each="each : ${breathlessness}" th:text="${each.alias}" th:value="${each}">Очень-очень тяжёлая (9)</option>
                             </select>
@@ -59,57 +58,49 @@
                     </div>
                 </div>
                 <!---->
-                <div class="row fs-5 mb-5">
-                    <div class="col-12">
-                        <h1 class="text-center fs-3 mb-0">Т6МХ: показатели до нагрузки</h1>
-                    </div>
-                </div>
-                <!---->
                 <div class="row mb-5">
-                    <div class="col-12">
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="upperBefore" class="form-label fw-semibold fs-4">Верхнее давление (мм рт.ст.)</label>
+                    <div class="col-12 col-lg-6 mb-5 mb-lg-0">
+                        <h2 class="text-center fs-4 mb-3">До нагрузки</h2>
+                        <div class="mb-3">
+                            <label for="upperBefore" class="form-label fw-semibold fs-5">Верхнее давление (мм рт.ст.)</label>
                             <input type="number" name="upperBefore" id="upperBefore" class="form-control" placeholder="120" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="lowerBefore" class="form-label fw-semibold fs-4">Нижнее давление (мм рт.ст.)</label>
+                        <div class="mb-3">
+                            <label for="lowerBefore" class="form-label fw-semibold fs-5">Нижнее давление (мм рт.ст.)</label>
                             <input type="number" name="lowerBefore" id="lowerBefore" class="form-control" placeholder="80" />
                         </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="oxygenPercentageBefore" class="form-label fw-semibold fs-4">Содержание кислорода в крови (%)</label>
+                        <div class="mb-3">
+                            <label for="oxygenPercentageBefore" class="form-label fw-semibold fs-5">Содержание кислорода в крови (%)</label>
                             <input type="number" step="0.01" name="oxygenPercentageBefore" id="oxygenPercentageBefore" class="form-control" placeholder="98.21" />
                         </div>
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <label for="pulseRateBefore" class="form-label fw-semibold fs-4">Пульс (уд/мин)</label>
+                        <div>
+                            <label for="pulseRateBefore" class="form-label fw-semibold fs-5">Пульс (уд/мин)</label>
                             <input type="number" name="pulseRateBefore" id="pulseRateBefore" class="form-control" placeholder="75" />
                         </div>
                     </div>
-                </div>
-                <!---->
-                <div class="row fs-5 mb-5">
-                    <div class="col-12">
-                        <h1 class="text-center fs-3 mb-0">Т6МХ: показатели после нагрузки</h1>
+                    <div class="col-12 col-lg-6">
+                        <h2 class="text-center fs-4 mb-3">После нагрузки</h2>
+                        <div class="mb-3">
+                            <label for="upperAfter" class="form-label fw-semibold fs-5">Верхнее давление (мм рт.ст.)</label>
+                            <input type="number" name="upperAfter" id="upperAfter" class="form-control" placeholder="175" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="lowerAfter" class="form-label fw-semibold fs-5">Нижнее давление (мм рт.ст.)</label>
+                            <input type="number" name="lowerAfter" id="lowerAfter" class="form-control" placeholder="105" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="oxygenPercentageAfter" class="form-label fw-semibold fs-5">Содержание кислорода в крови (%)</label>
+                            <input type="number" step="0.01" name="oxygenPercentageAfter" id="oxygenPercentageAfter" class="form-control" placeholder="99.34" />
+                        </div>
+                        <div>
+                            <label for="pulseRateAfter" class="form-label fw-semibold fs-5">Пульс (уд/мин)</label>
+                            <input type="number" name="pulseRateAfter" id="pulseRateAfter" class="form-control" placeholder="155" />
+                        </div>
                     </div>
                 </div>
                 <!---->
                 <div class="row">
-                    <div class="col-12">
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="upperAfter" class="form-label fw-semibold fs-4">Верхнее давление (мм рт.ст.)</label>
-                            <input type="number" name="upperAfter" id="upperAfter" class="form-control" placeholder="180" />
-                        </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="lowerAfter" class="form-label fw-semibold fs-4">Нижнее давление (мм рт.ст.)</label>
-                            <input type="number" name="lowerAfter" id="lowerAfter" class="form-control" placeholder="110" />
-                        </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="oxygenPercentageAfter" class="form-label fw-semibold fs-4">Содержание кислорода в крови (%)</label>
-                            <input type="number" step="0.01" name="oxygenPercentageAfter" id="oxygenPercentageAfter" class="form-control" placeholder="97.3" />
-                        </div>
-                        <div class="mb-5 col-12 col-md-6 col-lg-4">
-                            <label for="pulseRateAfter" class="form-label fw-semibold fs-4">Пульс (уд/мин)</label>
-                            <input type="number" name="pulseRateAfter" id="pulseRateAfter" class="form-control" placeholder="135" />
-                        </div>
+                    <div class="col-12 text-center">
                         <button type="submit" class="btn btn-lg btn-primary">Отправить</button>
                     </div>
                 </div>
